tests/data/bad/bad_inherit_instance_changes.py
from __future__ import annotations

from tests.data.bad.bad_inherit_instance import cfg

cfg = cfg.clone()
